app/styles/main.css
/* ... */
.portfolio-modal .item-details span.item-title {
    padding-right: 5px;
}
.portfolio-modal .item-details li {
  display: list-item;
}
.portfolio-modal .close-modal {
  position: absolute;
  width: 75px;
  height: 75px;
  background-color: transparent;
  top: 25px;
  right: 25px;
  cursor: pointer;
}
.portfolio-modal .close-modal:hover {
  opacity: 0.3;
}
.portfolio-modal .close-modal .lr {
  height: 75px;
  width: 1px;
  margin-left: 35px;
  background-color: #2C3E50;
  transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  /* IE 9 */
  -webkit-transform: rotate(45deg);
  /* Safari and Chrome */
  z-index: 1051;
}
.portfolio-modal .close-modal .lr .rl {
  height: 75px;
  width: 1px;
  background-color: #2C3E50;
  transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  /* IE 9 */
  -webkit-transform: rotate(90deg);
  /* Safari and Chrome */
  z-index: 1052;
}
.portfolio-modal .modal-backdrop {
  opacity: 0;
  display: none;
}
.section-title {
  margin-bottom: 50px;
}
.about-me {
  margin-bottom: 70px;
  margin-top: 20px;
}
.about-me .about-me-body {
  margin: 0 15px;
}
.about-me .about-me-text {
  margin-bottom: 40px;
}
.about-me .about-right-col {
  text-align: center;
}
.about-me .social-wrapper .btn-social {
  background-color: #2C3E50;
}
.about-me .contact-wrapper .contact-col {
  background-color: #18BC9C;
  height: 70px;
  line-height: 70px;
  color: white;
  font-weight: bold;
  font-size: 1.2em;
}
.about-me .contact-wrapper .contact-col.contact-email {
  background-color: #16a085;
}
.about-me .contact-wrapper .contact-col:hover {
  background-color: #10866f;
  text-decoration: none;
}
.about-me .about-me-image img {
  /*max-height: 300px;*/
  margin: 0;
  width: 100%;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
/* Toggle Styles */
.body-wrapper {
  padding-left: 0;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}
.sidebar-wrapper {
  height: 100%;
  background: #16a085;
  /*-webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;*/
}
/* Sidebar Styles */
.sidebar-nav {
  top: 0;
  padding: 0;
  list-style: none;
  font-size: 1.2em;
}
.sidebar-nav li {
  text-indent: 20px;
  line-height: 50px;
}
.sidebar-nav li a {
  display: block;
  text-decoration: none;
  color: white;
}
.sidebar-nav li a:hover {
  text-decoration: none;
  color: #fff;
  background: rgba(255, 255, 255, 0.2);
}
.sidebar-nav li a:active,
.sidebar-nav li a:focus {
  text-decoration: none;
}
.sidebar-nav > .sidebar-brand {
  height: 65px;
  font-size: 18px;
  line-height: 60px;
}
.sidebar-nav > .sidebar-brand a {
  color: #999999;
}
.sidebar-nav > .sidebar-brand a:hover {
  color: #fff;
  background: none;
}
@media (min-width: 768px) {
  .content-wrapper {
    position: relative;
  }
}

